--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.3) trusty; urgency=medium
+
+  * Fixes for defconfigs
+
+ -- Francesco Montefoschi <francesco.monte@gmail.com>  Wed, 16 Dec 2015 11:19:45 +0100
+
 dtweb (1.2) trusty; urgency=medium
 
   * UDOO Neo support
