--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.4) trusty; urgency=medium
+
+  * Added udoom4ctl
+
+ -- Francesco Montefoschi <francesco.monte@gmail.com>  Thu, 17 Dec 2015 12:45:07 +0100
+
 dtweb (1.3) trusty; urgency=medium
 
   * Fixes for defconfigs
