--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.7) trusty; urgency=medium
+
+  * Major refactoring in utils
+
+ -- Francesco Montefoschi <francesco.monte@gmail.com>  Wed, 30 Dec 2015 16:55:24 +0100
+
 dtweb (1.6) trusty; urgency=medium
 
   * Enable SPDIF and I2S audio on UDOO Neo
