--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.8) trusty; urgency=medium
+
+  * UDOO Quad/Dual compatibility
+
+ -- Francesco Montefoschi <francesco.monte@gmail.com>  Fri, 08 Jan 2016 15:54:38 +0100
+
 dtweb (1.7) trusty; urgency=medium
 
   * Major refactoring in utils
