--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.9) trusty; urgency=medium
+
+  * Release at af66494a7f39b71f9d80871fce5f49b09cbcc71c
+
+ -- Francesco Montefoschi <francesco.monte@gmail.com>  Tue, 16 Feb 2016 16:16:31 +0100
+
 dtweb (1.8) trusty; urgency=medium
 
   * UDOO Quad/Dual compatibility
