--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.11.1) xenial; urgency=medium
+
+  * Xenial
+
+ -- Francesco Montefoschi <francesco.montefoschi@udoo.org>  Wed, 24 Aug 2016 16:25:36 +0000
+
 dtweb (1.11) trusty; urgency=medium
 
   * Added ecspi2
