--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.12) xenial; urgency=medium
+
+  * Kernel 4 support
+
+ -- Francesco Montefoschi <francesco.montefoschi@udoo.org>  Wed, 30 Aug 2016 18:00:00 +0000
+
 dtweb (1.11.1) xenial; urgency=medium
 
   * Xenial
