--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.13.1) xenial; urgency=medium
+
+  * Fixed postinst script
+
+ -- Francesco Montefoschi <francesco.montefoschi@udoo.org>  Mon, 14 Nov 2016 12:39:20 +0100
+
 dtweb (1.13) xenial; urgency=medium
 
   * Enabled SPI1/2 for UDOO Quad/Dual
