--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.13.2) xenial; urgency=medium
+
+  * Fixed kernel detection under qemu
+
+ -- Francesco Montefoschi <francesco.montefoschi@udoo.org>  Wed, 16 Nov 2016 15:19:48 +0100
+
 dtweb (1.13.1) xenial; urgency=medium
 
   * Fixed postinst script
