--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dtweb (1.14) bionic; urgency=medium
+
+  * UDOO Neo on Bionic support
+
+ -- Francesco Montefoschi <francesco.montefoschi@udoo.org>  Sun, 15 Sep 2019 00:51:26 +0200
+
 dtweb (1.13.2) xenial; urgency=medium
 
   * Fixed kernel detection under qemu
